# raspi-koma

./: .gitignore  GAZEBO.md  README.md  README_ROS.md  README_UBUNTU.md  SETUP_LAPTOP.md  requirements.txt
camera_server/: live_snap.py  stream.py
robot_ws/: Makefile  README.md  ros.bash
robot_ws/src/car_controller/: package.xml  setup.py
robot_ws/src/car_controller/car_controller/: imu_node.py  motors_node.py  mpu6050.py  sonar_node.py
robot_ws/src/car_controller/launch/: car_launch.py
robot_ws/src/esp32s3/: README.md  motor_mpu.cpp
robot_ws/src/micro-ROS-Agent/: README.md
ros/: RC_CAR.md  README.md
scripts/: control_motor.py  imu.py  imu_ada.py  motor.py  motor_gpiozero.py  oled.py  oled_ips_scroll.py  pi_start.py  shutdown.py  shutdown_rpigpio.py
scripts/ultrasound/: README.md  sensor_ultrasound.py  ultrasound.py  ultrasound_gpiozero.py  ultrasound_multiple.py
setup/: ros.sh
setup/raspberry_pi/: build_ws.sh
setup/ubuntu_laptop/: build_ws.sh  install_deps.sh  install_ros.sh
systemd/: README.md  pi_shutdown.service  pi_start.service
view_ws/: Makefile  README.md
view_ws/src/car_description/: package.xml  setup.py
view_ws/src/car_description/config/: ekf.yaml  joystick.yaml
view_ws/src/car_description/launch/: emulator_launch.py  gazebo_launch.py  rviz_launch.py  web_launch.py
view_ws/src/car_description/rviz/: car_view.rviz  raspikoma_view.rviz
view_ws/src/car_description/urdf/: car.urdf  raspikoma.urdf
view_ws/src/car_description/web/: index.html  script.js  style.css
web/: index.py
web/templates/: index.html
